--- a/小程序/app.json
+++ b/小程序/app.json
@@ -1,10 +1,10 @@
 {
   "pages": [
-    "pages/list/list",
     "pages/index/index",
+    "pages/list/list",
     "pages/order/list/list",
     "pages/order/balance/balance",
-    "pages/detail/detail",
+    "pages/order/detail/detail",
     "pages/record/record"
   ],
   "window": {
